--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,13 +10,8 @@ table
 
 td
 {
-	font-family:"Quicksand";
-	font-size: 18px;
-}
-
-p
-{
-	font-size: 19px;
+	font-family:"St Ryde";
+	font-size: 17px;
 }
 
 div 
