--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
       - @items.each do |item|
         %tr
           %td
-            %div 
+            %div.title
               = item['title']
             %div
               - if item['content']
