--- a/views/index.haml
+++ b/views/index.haml
@@ -6,7 +6,7 @@
       Sunday Reading  
     %link{:href => "http://#{@host}/css/styles.css", :rel => "stylesheet"}
   %body
-    %img{:src => "http://#{@host}/images/header.png", :alt => "header"}
+    %img{:src => "http://#{@host}/images/footer.png", :alt => "header"}
     %table
       - @items.each do |item|
         %tr
